tried to fixed gaps

--- a/styles.css
+++ b/styles.css
@@ -12,17 +12,23 @@ li {
 
 :root {
     --main-el-bg: #262626;
+    --cont-bg-color: #1c1c1c;
     --border-radius: 10px;
     --hight-el: 48px;
     --width-el: 48px;
+    --svg-off-color-stroke:rgb(212, 23, 23);
+    --svg-on-color-stroke: rgb(23, 131, 23);
     --main-stroke-color: #CCCCCC;
+    --text-input-color: #808080;
+    --counter-bg-color: #D34545;
+    --counter-text-color: #e6e6e6;
     --first-br-point: 640px;
     --box-shadow-el: 0px 1px 2px 0px rgba(0, 0, 0, 0.1), inset 0px -1px 1px 0px hsla(0, 0%, 50%, 0.05), inset 0px 2px 1px -1px hsla(0, 0%, 100%, 0.1);
 }
 
 .chat_element {
-    border: 1px solid #262626;
-    background-color: #262626;
+    border: 1px solid var(--main-el-bg);
+    background-color: var(--main-el-bg);
     box-shadow: var(--box-shadow-el);
     border-radius: var(--border-radius);
     height: var(--hight-el);
@@ -30,10 +36,10 @@ li {
 }
 
 .container {
-    min-width: 552px;
+    min-width: 554px;
 
-    height: 56px;
-    background-color: #1c1c1c;
+    min-height: 56px;
+    background-color: var(--cont-bg-color);
     -webkit-backdrop-filter: blur(12px);
     backdrop-filter: blur(12px);
     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1), inset 0px -1px 1px 0px hsla(0, 0%, 50%, 0.05), inset 0px 2px 1px -1px hsla(0, 0%, 100%, 0.1);
@@ -49,13 +55,9 @@ li {
 
   }
 
-  @media screen and (min-width: var(--first-br-point)) {
-    .container {max-width: 689px;}
-}
-
 .chat_list {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 
 }
@@ -68,8 +70,8 @@ li {
     display: flex;
     align-items: center;
 
-    background:  #262626;
-    border: 1px solid  #262626;
+    background:  var(--main-el-bg);
+    border: 1px solid var(--main-el-bg);
     border-radius: 10px;
     box-shadow: var(--box-shadow-el);
 }
@@ -88,11 +90,11 @@ li {
 .mic-btn .off {
     opacity: 0;
     visibility: hidden;
-    stroke:rgb(212, 23, 23);
+    stroke:var(--svg-off-color-stroke);
 }
 
 .mic-btn .on {
-    stroke: rgb(23, 131, 23);
+    stroke: var(--svg-on-color-stroke);
 }
 
 .video-btn {
@@ -102,11 +104,11 @@ li {
   .video-btn .off {
     opacity: 0;
     visibility: hidden;
-    stroke:rgb(212, 23, 23);
+    stroke:var(--svg-off-color-stroke);
   }
 
   .video-btn .on {
-    stroke: rgb(23, 131, 23);
+    stroke: var(--svg-on-color-stroke);
 
 }
 
@@ -127,12 +129,12 @@ li {
 .text-input {
     min-width: 135px;
 
-    background-color: #1c1c1c;
+    background-color: var(--cont-bg-color);
     border-radius: 10px;
-    border: 4px solid #262626;
+    border: 4px solid var(--main-el-bg);
 
 
-    color: #808080;
+    color: var(--text-input-color);
   font-size: 25px;
   letter-spacing: 0px;
   line-height: 1.2;
@@ -141,26 +143,27 @@ li {
   padding-left: 10px;
   padding-top: 4px;
   padding-bottom: 4px;
-    }
 
-    @media screen and (min-width: var(--first-br-point)){
-        .text-input { width: 150px;}
-      }
+}
 
-      @media screen and (min-width: 700px){
-        .text-input {width: 170px;}
-      }
+@media screen and (min-width: 700px) {
+    .text-input {min-width: 170px;}
+}
 
-      @media screen and (min-width: 800px){
-        .text-input {width: 220px;}
-      }
+@media screen and (min-width: 900px) {
+    .text-input {min-width: 220px;}
+}
 
-      @media screen and (min-width: 1000px){
-        .text-input {width: 274px;}
-      }
+@media screen and (min-width: 1000px) {
+    .text-input {min-width: 240px;}
+}
+
+@media screen and (min-width: 1200px) {
+    .text-input {min-width: 275px;}
+}
 
 .counter {
-  background-color: #D34545;
+  background-color: var(--counter-bg-color);
   border-radius: 50%;
   width: 32px;
   height: 32px;
@@ -180,7 +183,7 @@ li {
 }
 
     .counter_number {
-        color: #e6e6e6;
+        color: var(--counter-text-color);
         font-size: 24px;
         letter-spacing: 0px;
         line-height: 1.2;
